Thu Jun 28 20:08:57 UTC 2012  Byron Harris  <harrisb@ociweb.com>

        * dds/DdsDcps.mpc:

          Added back server-side header files for local IDL
          interfaces so that "make install" will still work.

Thu Jun 28 16:37:53 UTC 2012  Byron Harris  <harrisb@ociweb.com>

        * dds/DdsDcps.mpc:

          When compiling OpenDDS_Dcps library's local IDL interfaces,
          suppress generation of server-side source.

        * DevGuideExamples/DCPS/Messenger/DataReaderListenerImpl.h:
        * DevGuideExamples/DCPS/Messenger_ZeroCopy/DataReaderListenerImpl.h:
        * dds/DCPS/BitPubListenerImpl.h:
        * dds/DCPS/DataReaderImpl.h:
        * dds/DCPS/DomainParticipantFactoryImpl.h:
        * dds/DCPS/EntityImpl.h:
        * dds/DCPS/Registered_Data_Types.h:
        * dds/DCPS/Service_Participant.h:
        * dds/DCPS/TopicDescriptionImpl.h:
        * dds/DCPS/TopicImpl.h:
        * dds/DdsDcps.mpc:
        * dds/InfoRepo/DomainParticipantListener_i.h:
        * examples/DCPS/IntroductionToOpenDDS/ExchangeEventDataReaderListenerImpl.h:
        * examples/DCPS/IntroductionToOpenDDS/QuoteDataReaderListenerImpl.h:
        * examples/DCPS/Messenger_IOGR_Imr/DataReaderListener.h:
        * examples/DCPS/Messenger_Imr/DataReaderListener.h:
        * performance-tests/Bench/src/DataReaderListener.h:
        * performance-tests/DCPS/InfoRepo_population/DataReaderListener.h:
        * performance-tests/DCPS/MulticastListenerTest/DataReaderListener.h:
        * performance-tests/DCPS/Priority/DataReaderListener.h:
        * performance-tests/DCPS/SimpleLatency/PubListener.h:
        * performance-tests/DCPS/SimpleLatency/SubListener.h:
        * performance-tests/DCPS/TCPListenerTest/DataReaderListener.h:
        * performance-tests/DCPS/TCPProfilingTest/DataReaderListener.h:
        * performance-tests/DCPS/UDPListenerTest/DataReaderListener.h:
        * tests/DCPS/BidirMessenger/DataReaderListener.h:
        * tests/DCPS/BuiltInTopic/main.cpp: